@@ -4,6 +4,11 @@ Changelog
 1.3 (unreleased)
 ----------------
 
+- If downloaded content type has been selected in portlet settings
+  and content type can't been added in current folder,
+  portlet is hidden.
+  [thomasdesvenain]
+
 - Works with dexterity.
   We can upload dexterity content types which have a file or image field.
   We can upload contents in dexterity containers.
